Today I have working different file html and css in project

--- a/contact.html
+++ b/contact.html
@@ -3,9 +3,10 @@
 
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="css/contact.css">
     <link rel="stylesheet" href="css/main.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home | IIP Academy</title>
+    <title>Contact | IIP Academy</title>
 </head>
 
 <body>
@@ -42,7 +43,7 @@
             <div class="menuRight">
                 <ul>
                     <li>
-                        <a href="index.html" class="active">home</a>
+                        <a href="index.html">home</a>
                     </li>
                     <li>
                         <a href="about.html">about us</a>
@@ -57,13 +58,13 @@
                         <a href="enquiry.html">enquiry</a>
                     </li>
                     <li>
-                        <a href="contact.html">contact us</a>
+                        <a href="contact.html" class="active">contact us</a>
                     </li>
                 </ul>
             </div>
         </div>
         <!-- menu link and icons end -->
-        <!-- left menu and right image section start -->
+        <!-- left menu and right contact section start -->
         <div class="sideMenuAndImage">
             <div class="sideMenuLeft">
                 <div class="sideMenu">
@@ -124,109 +125,62 @@
                     </div>
                 </div>
             </div>
-            <div class="wsCubeImageRight">
-                <div class="wsCubeImage">
-                    <img src="images/banners.png" title="Ws Cube Tech image" alt=" wsCubeImage">
+            <div class="contectMiddleSection">
+                <div class="contactPageHeading">
+                    <div>
+                        <h1>contact:</h1>
+                    </div>
+                    <div>
+                        <h2>
+                            <a href="index.html"> home /</a>
+                            contact:
+                        </h2>
+                    </div>
                 </div>
-                <div class="course">
-                    <h2>course</h2>
-                    <div class="courseIconAndText">
-                        <div class="commonWidth">
-                            <div class="phpBackgroundColor">
-                                <img src="images/courses/php.png" alt="" title="course image">
-                            </div>
-                            <div class="phpTextColor">
-                                <h5> PHP (WEBSITE DEVELOPMENT)</h5>
-                            </div>
+                <div class="phoneAndLocationContent">
+                    <div class="phoneIconAndContent">
+                        <div class="phoneImg">
+                            <img src="images/phone.png" title="phone" alt="">
                         </div>
-                        <div class="commonWidth">
-                            <div class="phpAdvanceBgColor">
-                                <img src="images/courses/adv-php.png" alt="" title="course image">
-                            </div>
-                            <div class="phpAdvanceTextColor">
-                                <h5> ADVANCE PHP</h5>
-                            </div>
+                        <div class="iipEmailAndWebsite">
+                            <p>
+                                <span>phone:</span>
+                                091039084809, 7318003994428
+                            </p>
                         </div>
-                        <div class="commonWidth">
-                            <div class="phpAdvanceBgColor">
-                                <img src="images/courses/digi-marketing.png" alt="" title="course image">
-                            </div>
-                            <div class="phpAdvanceTextColor">
-                                <h5>Digital Marketing </h5>
-                            </div>
+                        <div class="iipEmailAndWebsite">
+                            <p>
+                                <span>email id</span>
+                                <a href="www.iipacademy.com" title="email id">info@iipacademy.com</a>
+                            </p>
                         </div>
-                        <div class="commonWidth">
-                            <div class="graphicDesignBgColor">
-                                <img src="images/courses/graphic-design.png" alt="" title="course image">
-                            </div>
-                            <div class="graphicDesignTxtColor">
-                                <h5> Graphic Design</h5>
-                            </div>
+                        <div class="iipEmailAndWebsite">
+                            <p>
+                                <span>website</span>
+                                <a href="www.iipacademy.com" title="website">www.iipacademy.com</a>
+                            </p>
                         </div>
-                        <div class="commonWidth">
-                            <div class="androidAppBgColor">
-                                <img src="images/courses/android.png" alt="" title="course image">
-                            </div>
-                            <div class="androidAppTxtColor">
-                                <h5> ANDROID APP DEVELOPMENT</h5>
-                            </div>
+                    </div>
+                    <div class="locationIconAndContent">
+                        <div class="locationImg">
+                            <img src="images/address-pin.png" title="location" alt="">
                         </div>
-                        <div class="commonWidth">
-                            <div class="pythonBgColor">
-                                <img src="images/courses/python.png" alt="" title="course image">
-                            </div>
-                            <div class="pythonTxtColor">
-                                <h5> Python</h5>
-                            </div>
+                        <div class="locationContent">
+                            <p>
+                                Ground Floor, Laxmi Tower, Bhaskar Circle, Ratanada, Jodhpur (Raj.)
+                            </p>
                         </div>
-                        <div class="commonWidth paddingButtom">
-                            <div class="seoBgColor">
-                                <img src="images/courses/seo.png" alt="" title="course image">
-                            </div>
-                            <div class="seoTxtColor">
-                                <h5> Search Engine Optimization</h5>
-                            </div>
-                        </div>
-                        <div class="commonWidth paddingButtom">
-                            <div class="wordpressBgColor">
-                                <img src="images/courses/wordpress.png" alt="" title="course image">
-                            </div>
-                            <div class="wordpressTxtColor">
-                                <h5> WordPress</h5>
-                            </div>
-                        </div>
+                    </div>
+                </div>
+                <div class="mapHeadingAndContent">
+                    <h2>Find Us On Map</h2>
+                    <div>
+                        <img src="images/map.png" title="map" alt="">
                     </div>
                 </div>
             </div>
         </div>
-        <!-- left menu and right image section end -->
-        <!-- how we work selection start -->
-        <div class="howWeWorkSection">
-            <h2> how we work</h2>
-            <div class="howWeWorkImageSelection">
-                <div class="imageBox imageBoxColor1">
-                    <div class="imageSelectionFirstRowColumn1">
-                        <h3>we listen to you</h3>
-                    </div>
-                </div>
-                <div class="imageBox imageBoxColor2">
-                    <div class="imageSelectionFirstRowColumn2">
-                        <h3>we analyze your requirements</h3>
-                    </div>
-                </div>
-                <div class="imageBox imageBoxColor3">
-                    <div class="imageSelectionFirstRowColumn3">
-                        <h3>we create a plan</h3>
-                    </div>
-                </div>
-                <div class="imageBox2 imageBoxColor4">
-                    <div class="imageSelectionFirstRowColumn4">
-                        <h3>we implement the plan</h3>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- how we work selection end -->
+        <!-- left menu and right contact section end -->
         <!-- footer Selection start -->
         <div class="footerSelection">
             <div>
