--- a/course.html
+++ b/course.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="css/main.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home | IIP Academy</title>
+    <title>Course | IIP Academy</title>
 </head>
 
 <body>
@@ -42,13 +42,13 @@
             <div class="menuRight">
                 <ul>
                     <li>
-                        <a href="index.html" class="active">home</a>
+                        <a href="index.html" >home</a>
                     </li>
                     <li>
                         <a href="about.html">about us</a>
                     </li>
                     <li>
-                        <a href="course.html">course</a>
+                        <a href="course.html" class="active">course</a>
                     </li>
                     <li>
                         <a href="gallery.html">gallery</a>
@@ -233,22 +233,22 @@
                 <h2>quick link</h2>
                 <ul>
                     <li>
-                        <a href="index.html"> home</a>
+                        <a href="index.html" title="home"> home</a>
                     </li>
                     <li>
-                        <a href="about.html">about us</a>
+                        <a href="about.html" title="about">about us</a>
                     </li>
                     <li>
-                        <a href="course.html"> course</a>
+                        <a href="course.html" title="course"> course</a>
                     </li>
                     <li>
-                        <a href="gallery.html">gallery</a>
+                        <a href="gallery.html" title="gallery">gallery</a>
                     </li>
                     <li>
-                        <a href="enquiry.html">enquiry</a>
+                        <a href="enquiry.html" title="enquiry">enquiry</a>
                     </li>
                     <li>
-                        <a href="contact.html">contact us</a>
+                        <a href="contact.html" title="contact">contact us</a>
                     </li>
                 </ul>
             </div>
